--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -1,13 +1,19 @@
 .nav  {
     background-color: rosybrown;
     grid-area: N;
-    padding: 10px;
+    padding: 20px;
 }
-.nav a{
-    list-style-type: none;
-    color: black;
+
+.nav ul {
+    list-style: none;
+}
+.item {
     text-decoration: none;
+    color: antiquewhite;
+    font-size: 30px;
 }
-.nav a:active {
-    color: gold;
+.active {
+    color: mediumpurple;
+    text-decoration: none;
+    font-size: 30px;
 }
