Adding OOP in project

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 .app-wrapper {
   display: grid;
   grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 3fr 10fr;
   grid-template-areas:
   "H H"
   "N C";
@@ -22,7 +22,7 @@ body {
 }
 .app-wrapper__content {
   grid-area: C;
-  background-color: deepskyblue;
+  background-color: lightskyblue;
 }
 
 
