--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -6,21 +6,8 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 10px;
 }
-
-
-.layout {
+.dialogs {
     display: grid;
-    grid-template-areas: "contacts chat";
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 10fr;
     margin: 10px 0px 0px 100px;
-}
-
-
-
-
-
-.chat {
-    margin-top: 30px;
-    grid-area: chat;
-    padding-left: 50px;
 }
