Added users from API, pagination and output from pages. Fixed Dialogs and Profile pages with input/output problem, because of connect to redux store.

--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -1,8 +1,8 @@
 .ava {
-    width: 70px;
-    height: 70px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
-    margin-left: 15px;
+    margin-left: 30px;
 }
 
 .user {
@@ -23,7 +23,7 @@
 .userInfo {
     display: flex;
     border: 4px solid dimgray;
-    width: 900px;
+    width: 800px;
 }
 .description {
     display: flex;
@@ -42,4 +42,15 @@
 .button {
     background-color: ghostwhite;
     border: 3px solid greenyellow;
+    width: 154px;
+}
+.stylePages{
+    display: flex;
+    gap: 10px;
+}
+.stylePages span {
+    cursor: pointer;
+}
+.pageActive {
+    font-weight: 700;
 }
