--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ body {
   font-size: 40px;
   width: 100%;
   min-height: 100vh;
-  padding: 0px 30px;
+  padding: 0 30px;
+  overflow-x: hidden;
 }
 
 .app-wrapper {
